--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
    "name": "elogank/lol-replay",
    "description": "Some dependencies used by other repositories to manage League of Legends replays",
    "keywords": ["lol", "library", "league of legends", "replay"],
-   "licence": "MIT",
+   "license": "MIT",
    "authors": [
        {
            "name": "Sylvain Lorinet",
